--- a/src/components/article-preview.module.css
+++ b/src/components/article-preview.module.css
@@ -28,3 +28,21 @@
   display: flex;
   justify-content: space-between;
 }
+.h2{
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.h2 h2{
+    text-transform: uppercase;
+}
+
+.h2 a{
+    padding-left:10px;
+}
+
+.h2 a:hover{
+    border-bottom-color: var(--primary);
+    text-decoration: underline;
+}
