Ndarja e vjershave dhe kengeve - Zgjidhja e bug

--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   max-width: var(--size-max-width);
+  /*width: 90%;  due to mobile burger */
   align-items: center;
   margin: 0 auto;
   padding: var(--space-2xl) var(--size-gutter);
@@ -41,6 +42,7 @@
   gap: var(--space-md);
 }
 
+
 @media (max-width: 767px) {
   .logoLink > span:last-child {
     border: 0;
@@ -52,6 +54,12 @@
     position: absolute;
     white-space: nowrap;
     width: 1px;
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    width: 85%;
   }
 }
 
