--- a/src/templates/blog-post.module.css
+++ b/src/templates/blog-post.module.css
@@ -4,10 +4,10 @@
   font-style: italic;
   margin: 0 auto 1em;
   max-width: var(--size-max-width);
-  padding-bottom: var(--size-gutter);
+  /*padding-bottom: var(--size-gutter); */
   padding-left: var(--size-gutter);
   position: relative;
-  top: -1em;
+  /*top: -1em; */
 }
 
 .article {
@@ -81,8 +81,10 @@
   .article {
     gap: var(--space-3xl);
     margin: 0 var(--size-gutter) 0 auto;
-    padding-left: 0;
-    padding-right: 0;
+    /*padding-left: 0;
+    padding-right: 0; */
+    padding-bottom: 0px;
+    padding-top: 0px;
     width: calc(85% - var(--size-gutter));
   }
 
